# pragmatic

./: .gitignore  README.md  main.py  pyproject.toml
base/: playwright_async.py
loggers/: logger.py
services/: fambet.py  pragmatic.py  provider_manager.py  spin_manager.py
